# udp-server

./: .gitignore  initScript.sh
backEnd/SharedClasses/: DataHeader.cpp  DataHeader.hpp  FecCoder.cpp  FecCoder.hpp  FileManager.cpp  FileManager.hpp  FilePacket.cpp  FilePacket.hpp  FileParser.cpp  FileParser.hpp  JsonParser.cpp  JsonParser.hpp  ModifiedFile.cpp  ModifiedFile.hpp  MyDirectory.cpp  MyDirectory.hpp  WebConnection.cpp  WebConnection.hpp  shared.plantuml
backEnd/UdpRx/: CMakeLists.txt  Main.cpp  UdpReceiver.cpp  UdpReceiver.hpp
backEnd/UdpTx/: CMakeLists.txt  JsonParser.cpp  JsonParser.hpp  UdpTX.cpp  UdpTX.hpp  UdpTx  app  main.cpp
backEnd/nodeServer/: index.js  message.json  package-lock.json  package.json
frontEnd/: package-lock.json  package.json
frontEnd/src/: App.css  App.js  index.js
frontEnd/src/components/: index.js
frontEnd/src/components/DisplayPanel/: DisplayPanel.jsx
frontEnd/src/components/FileSelector/: FileSelector.jsx
frontEnd/src/components/MySlider/: MySlider.jsx
frontEnd/src/components/navBar/: NavBar.jsx
frontEnd/src/components/textForm/: TextForm.jsx
frontEnd/src/containers/: index.js
frontEnd/src/containers/FileForm/: FileForm.css  FileForm.jsx
frontEnd/src/containers/contact/: Contact.jsx
frontEnd/src/containers/homePage/: HomePage.jsx
frontEnd/src/containers/manual/: Manual.jsx
frontEnd/src/containers/reciever/: Reciever.jsx
frontEnd/src/containers/statistics/: Statistics.jsx
frontEnd/src/containers/transmitter/: Transmitter.jsx
scripts/: initScript.sh  installNodeDemon.sh  installNodejs.sh  installWirehair.sh
